# sequencer

./: AGENTS.md  Cargo.toml
crates/apollo_compilation_utils/src/resource_limits/: resource_limits_test.rs  resource_limits_unix.rs
crates/blockifier_reexecution/: Cargo.toml
crates/blockifier_reexecution/src/: compile.rs  utils.rs
crates/blockifier_reexecution/src/state_reader/: reexecution_state_reader.rs
crates/starknet_transaction_prover/: Cargo.toml
crates/starknet_transaction_prover/resources/: privacy_demo_prove_transaction_request.json
crates/starknet_transaction_prover/resources/rpc_records/: test_prove_privacy_demo_transaction.json
crates/starknet_transaction_prover/src/: ffi.rs  lib.rs  running.rs  test_utils.rs
crates/starknet_transaction_prover/src/proving/: prover_test.rs  virtual_snos_prover.rs  virtual_snos_prover_test.rs
crates/starknet_transaction_prover/src/running/: rpc_records.rs  rpc_records_test.rs  runner.rs  storage_proofs.rs  storage_proofs_test.rs
crates/starknet_transaction_prover/src/server/: rpc_impl.rs  rpc_spec_test.rs
crates/tx_prover_ffi/: Cargo.toml
crates/tx_prover_ffi/src/: lib.rs  main.rs
tasks/: lessons.md  todo.md
