[package]
name = "blockifier_reexecution"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Tool for re-executing historical Starknet blocks to verify transaction execution correctness."

[features]
blockifier_regression_https_testing = []
cairo_native = ["blockifier/cairo_native"]
# In-process Sierra-to-CASM compilation (no subprocess). Required for iOS/mobile.
inline_sierra_compile = ["dep:cairo-lang-starknet-classes", "dep:apollo_compilation_utils"]

[dependencies]
apollo_compilation_utils = { workspace = true, optional = true }
apollo_compile_to_casm.workspace = true
apollo_compile_to_casm_types.workspace = true
apollo_config.workspace = true
apollo_rpc_execution = { workspace = true, optional = true }
apollo_sierra_compilation_config.workspace = true
assert_matches.workspace = true
blockifier = { workspace = true, features = ["reexecution"] }
clap = { workspace = true, features = ["cargo", "derive"] }
flate2.workspace = true
google-cloud-storage.workspace = true
indexmap = { workspace = true, features = ["serde"] }
pretty_assertions.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
retry.workspace = true
serde.workspace = true
serde_json.workspace = true
cairo-lang-starknet-classes = { workspace = true, optional = true }
starknet-core.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
validator.workspace = true

[dev-dependencies]
cairo-lang-starknet-classes = { workspace = true }
mockito.workspace = true
rstest.workspace = true
starknet_api = { workspace = true, features = ["testing"] }

[lints]
workspace = true
